k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: investment-calculator-service
spec:
  selector:
    app: investment-calculator
  ports:
  - protocol: "TCP"
    port: 8082
    targetPort: 80
