k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: investment-calculator-ingress
  namespace: investment-calculator
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: investment-calculator.learnings.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: investment-calculator-service
            port:
              number: 8082
